# lavalink-list

./: .env.example  .gitignore  .gitmodules  .hintrc  Dockerfile  LICENSE  README.md  biome.json  config.js  config.json  index.js  index.ts  main.py  nodes.json  package.json  pnpm-lock.yaml  pyproject.toml  remove_duplicates.py  requirements.txt  tsconfig.json  turbo.json  update_nodes.py  update_nodes.ts
.github/workflows/: build-docker.yml  deploy.yml  main .yml  nodes.yml  python-app.yml  run.yml
Events/: ready.js
api/: .gitignore  package.json  process.json  tsconfig.json  vitest.config.ts  wrangler.toml
api/prisma/: schema.prisma
api/src/: index.ts
apps/web/: README.md  index.d.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: _error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/faq/: page.tsx
apps/web/src/app/fonts/: index.ts
apps/web/src/app/non-ssl/: page.tsx
apps/web/src/app/ssl/: page.tsx
apps/web/src/components/home/: CustomAlert .tsx  NodeDetails.tsx  NodeList.tsx
apps/web/src/components/layout/: footer.tsx  navbar.tsx
apps/web/src/components/theme/: ThemeButton.tsx  providers.tsx
apps/web/src/components/ui/: Particle.tsx
apps/web/src/lib/: particle-animation.ts  spotlight-effect.ts  use-scroll.ts  utils.ts
apps/web/src/pages/api/: non-ssl.ts  ssl.ts
apps/web/src/types/: index.ts
apps/workflows/: README.md  package.json  tsconfig.json  update_nodes.ts
apps/workflows/.github/workflows/: main .yml
events/: ready.js
prisma/: schema.prisma
