[tool.poetry]
name = "lavalink-list"
version = "0.1.0"
description = ""
authors = ["appujet <sdipedit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
prisma = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
